--- a/ReportHelper.csproj
+++ b/ReportHelper.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>CB.Helpers.ReportHelper</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MathNet.Numerics" Version="4.15.0" />
+  </ItemGroup>
+
 </Project>
